Added ToDo.txt. Added test/ directory. Added option --title. Renamed Formatters to plainTextWriter and SimpleHtmlWriter. Updated website.
svn path=/TestDox/trunk/; revision=231

--- a/projects/CodeBlocks/Distribution.cbp
+++ b/projects/CodeBlocks/Distribution.cbp
@@ -15,6 +15,7 @@
 		<Unit filename="..\..\MANIFEST.in" />
 		<Unit filename="..\..\Readme.txt" />
 		<Unit filename="..\..\Setup.py" />
+		<Unit filename="..\..\ToDo.txt" />
 		<Unit filename="..\..\mk.bat" />
 		<Unit filename="..\..\publish2web.bat" />
 		<Unit filename="..\..\set-pyinstallerpath.bat" />
