Updated text of TestDox webpage. Moved CppUnit and Boost.Test TestDox output to output subdirectory.
svn path=/TestDox/trunk/; revision=242

--- a/projects/CodeBlocks/Website.cbp
+++ b/projects/CodeBlocks/Website.cbp
@@ -22,6 +22,12 @@
 		<Unit filename="..\..\website\boosttest\testdox_log_formatter.ipp" />
 		<Unit filename="..\..\website\content.php" />
 		<Unit filename="..\..\website\index.php" />
+		<Unit filename="..\..\website\output\boosttest\content.php" />
+		<Unit filename="..\..\website\output\boosttest\index.php" />
+		<Unit filename="..\..\website\output\boosttest\page.php" />
+		<Unit filename="..\..\website\output\cppunit\content.php" />
+		<Unit filename="..\..\website\output\cppunit\index.php" />
+		<Unit filename="..\..\website\output\cppunit\page.php" />
 		<Unit filename="..\..\website\page.php" />
 		<Unit filename="..\..\website\source-highlight-cpp.bat" />
 		<Unit filename="..\..\website\source-highlight-py.bat" />
